# INF281

./: CMakeLists.txt  README.md
192e2/: Banco-ClientesSeg.csv
201e2/p1/: CMakeLists.txt  ConferencePaper.cpp  ConferencePaper.h  JournalPaper.cpp  JournalPaper.h  Paper.cpp  Paper.h  ReportePruba.txt  main.cpp
201e2/p2a/: ArbolBBG.h  CMakeLists.txt  main.cpp
201e2/p2b/: ArbolBBG.h  CMakeLists.txt  Cuenta.cpp  Cuenta.h  Cuentas.cpp  Cuentas.h  Moneda.cpp  Moneda.h  ReporteDeCuentas.txt  main.cpp
202e2/p1/: Ambulatorio.cpp  Ambulatorio.h  CMakeLists.txt  Emergencia.cpp  Emergencia.h  NPaciente.cpp  NPaciente.h  Paciente.cpp  Paciente.h  Procesa.cpp  Procesa.h  ReporteAtencion.txt  Urgencia.cpp  Urgencia.h  main.cpp
202e2/p2a/: CMakeLists.txt  Dato.cpp  Dato.h  PriorityQueue.h  Prueba.cpp  Prueba.h  main.cpp
lab6/p1/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h  PriorityQueueEnteros.cpp  PriorityQueueEnteros.h  main.cpp
lab7/: CMakeLists.txt  Persona.cpp  Persona.hpp  main.cpp
lab8/: Ambulatorio.cpp  Ambulatorio.h  CMakeLists.txt  Emergencia.cpp  Emergencia.h  ListaDePacientes.cpp  ListaDePacientes.h  Paciente.cpp  Paciente.hpp  ReporteCitas.txt  Urgencia.cpp  Urgencia.h  main.cpp
lab9/p1/: Ambulatorio.h  CMakeLists.txt  Emergencia.h  Paciente.cpp
lab9/p2/: Ambulatorio.cpp  CMakeLists.txt  Emergencia.cpp  ListaDePacientes.cpp  ListaDePacientes.h  NodoPaciente.cpp  NodoPaciente.h  Paciente.h  Urgencia.cpp  Urgencia.h  main.cpp
