cmake_minimum_required(VERSION 3.17)
project(INF281)

#add_subdirectory("${PROJECT_SOURCE_DIR}/lab8" "lab8/")
#add_subdirectory("${PROJECT_SOURCE_DIR}/lab7" "lab7/")

#add_subdirectory("${PROJECT_SOURCE_DIR}/lab9/p1" "labs/")
#add_subdirectory("${PROJECT_SOURCE_DIR}/lab9/p2" "labs/")

#add_subdirectory("${PROJECT_SOURCE_DIR}/lab6/p1" "labs/")

#add_subdirectory("${PROJECT_SOURCE_DIR}/201e2/p1" "ex/")
#add_subdirectory("${PROJECT_SOURCE_DIR}/201e2/p2a" "ex/")
add_subdirectory("${PROJECT_SOURCE_DIR}/201e2/p2b" "ex/")